kube/polynotes-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polynotes-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: polynotes-front
  template:
    metadata:
      labels:
        app.kubernetes.io/name: polynotes-front
    spec:
      containers:
        - name: polynotes-front
          image: localhost:5000/polynotes-front
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
