kube/polynotes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polynotes-front-service
spec:
  ports:
  - nodePort: 80
    name: insecure
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: polynotes-front
  type: NodePort
